# ChangeLog for net-misc/nxserver-personal
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-personal/ChangeLog,v 1.13 2004/07/20 08:42:43 stuart Exp $

*nxserver-personal-1.3.2-r1 (20 Jul 2004)

  20 Jul 2004; Stuart Herbert <stuart@gentoo.org>
  +nxserver-personal-1.3.2-r1.ebuild:
  Version bump; moved dep on nxclient from the ebuild after user complaints that
  the dep was being ignored

*nxserver-personal-1.3.2 (13 May 2004)

  13 May 2004; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.2.2-r1.ebuild, nxserver-personal-1.2.2-r2.ebuild,
  nxserver-personal-1.2.2.ebuild, nxserver-personal-1.3.0-r1.ebuild,
  nxserver-personal-1.3.0.ebuild, nxserver-personal-1.3.0_beta2.ebuild,
  nxserver-personal-1.3.2.ebuild, files/1.2.2/50nxserver:
  Version bump; removed old versions

*nxserver-personal-1.2.2-r1 (10 Mar 2004)

  10 Mar 2004; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.2.2-r1.ebuild, nxserver-personal-1.2.2-r2.ebuild,
  nxserver-personal-1.2.2.ebuild, nxserver-personal-1.3.0-r1.ebuild,
  nxserver-personal-1.3.0.ebuild, nxserver-personal-1.3.0_beta2.ebuild:
  Changed date in the header, to shut repoman up

  10 Mar 2004; Stuart Herbert <stuart@gentoo.org> :
  Version bump

*nxserver-personal-1.3.0-r1 (23 Dec 2003)

  23 Dec 2003; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.3.0-r1.ebuild:
  Version bump

*nxserver-personal-1.3.0 (21 Dec 2003)

  21 Dec 2003; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.3.0.ebuild, files/1.3.0/50nxserver:
  Version bump

  07 Dec 2003; <spider@gentoo.org> nxserver-personal-1.3.0_beta2.ebuild:
  fixing a dependency to make repoman happy

  26 Nov 2003; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.3.0_beta2.ebuild:
  Dependencies now working

*nxserver-personal-1.3.0_beta2 (24 Nov 2003)

  24 Nov 2003; Stuart Herbert <stuart@gentoo.org>
  nxserver-personal-1.3.0_beta2.ebuild: