@@ -1,0 +1,1 @@
+MD5 d2ebbee940aa92de869d02a5d12bd127 nxserver-1.4.0-66.i386.rpm 5625817
