@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxserver-personal
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-personal/ChangeLog,v 1.13 2004/07/20 08:42:43 stuart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxserver-personal/ChangeLog,v 1.14 2004/08/30 20:46:28 stuart Exp $
+
+*nxserver-personal-1.4.0 (30 Aug 2004)
+
+  30 Aug 2004; Stuart Herbert <stuart@gentoo.org>
+  +nxserver-personal-1.4.0.ebuild:
+  Added snapshot 4 of the next version of NX Server
 
 *nxserver-personal-1.3.2-r1 (20 Jul 2004)
 
